[tool.poetry]
name = "llm-agent"
version = "0.1.0"
description = ""
authors = ["Jiři Filip <wonttell@example.com>"]
readme = "README.md"
packages = [
    {include = "llm_agent", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
